Fixed a bug on mobile that pushed page content up and down due to animations, content update

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -39,6 +39,7 @@
 
 .form {
   margin-block: 0.5rem;
+  padding: 0.75rem;
 
   height: 2.5vh;
   width: 35vw;
